/*
 * This build file was auto generated by running the Gradle 'init' task
 * by 'baraka' at '13-12-16 下午11:29' with Gradle 1.10-rc-2
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at http://gradle.org/docs/1.10-rc-2/userguide/tutorial_java_projects.html
 */

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'jetty'
sourceCompatibility = 1.8
version = ''
group = 'shderp'

test {
    jvmArgs "-XX:MaxPermSize=256m"
}

tasks.withType(Compile) {
  options.encoding = "UTF-8"
}

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/sourceforge-releases"
    }
}

// create syntastic classpath files
task vimFiles << {
  def classpathFiles = new HashSet<String>()
  def addJars = { proj ->
    proj.configurations.each { conf ->
      conf.each { jar ->
        classpathFiles.add(jar)
      }
    }
    proj.sourceSets.each { srcSet ->
      srcSet.java.srcDirs.each { dir ->
        println dir.absolutePath
        classpathFiles.add(dir.absolutePath)
      }
    }
  }
  getChildProjects().each { proj ->
    addJars(proj.value)
  }
  addJars(rootProject)

  new File(rootProject.projectDir.absolutePath + "/.syntastic-classpath").text = classpathFiles.collect().join("\n")

  // create .vimrc.local
  new File(rootProject.projectDir.absolutePath + "/.vimrc.local").text = """
let g:syntastic_java_javac_config_file_enabled = 1
let g:syntastic_java_javac_config_file = '.syntastic-classpath'
"""

  println """Created .vimrc.local... don't forget to source this in your vim config"""
}

task copyJars(type: Copy) {
  from configurations.runtime
  into 'src/main/webapp/WEB-INF/lib'
}

// In this section you declare the dependencies for your production and test code
dependencies {
    compile(
    	'org.springframework:spring-test:4.0.2.RELEASE',
        //utils 相关jar包
        'org.apache.commons:commons-lang3:3.1',
        'org.apache.commons:commons-collections4:4.0',
        'com.google.guava:guava:15.0',
        'commons-io:commons-io:2.4',
        'commons-codec:commons-codec:1.8',
        'commons-fileupload:commons-fileupload:1.3',
        'commons-beanutils:commons-beanutils:1.9.0',
        'org.apache.commons:commons-compress:1.6',

        //其他基础依赖jar包,annotation解析、字节码解析、词法分析、类型解析和aop接口
        //'org.jboss:jandex:1.1.0.Final',
        //'org.javassist:javassist:3.18.1-GA',
        //'org.antlr:antlr:3.5.1',
        //'com.fasterxml:classmate:1.0.0',
        //'aopalliance:aopalliance:1.0',

        //data source 相关jar包
        'com.alibaba:druid:1.0.3',

        //日志相关jar包
        'org.slf4j:slf4j-api:1.7.5',
        'org.slf4j:jcl-over-slf4j:1.7.5',
        'ch.qos.logback:logback-classic:1.0.13',

        //aspectj相关jar包
        'org.aspectj:aspectjrt:1.7.4',
        'org.aspectj:aspectjweaver:1.7.4',

        //spring相关jar包
        'org.springframework:spring-context:4.0.2.RELEASE',
        'org.springframework:spring-context-support:4.0.2.RELEASE',
        'org.springframework:spring-jdbc:4.0.2.RELEASE',
        'org.springframework:spring-orm:4.0.2.RELEASE',
        'org.springframework:spring-tx:4.0.2.RELEASE',

        //spring webmvc相关jar包
        'org.springframework:spring-webmvc:4.0.2.RELEASE',
        'org.springframework:spring-web:4.0.2.RELEASE',

        //spring jpa
        'org.springframework.data:spring-data-jpa:1.5.0.RELEASE',

        //hibernate相关jar包
        'org.hibernate:hibernate-core:4.3.2.Final',
        'org.hibernate:hibernate-entitymanager:4.3.2.Final',
        'org.hibernate:hibernate-ehcache:4.3.2.Final',
        'org.hibernate.common:hibernate-commons-annotations:4.0.4.Final',

        //hibernate validator相关jar包
        'org.hibernate:hibernate-validator:5.1.0.Final',

        //apache shiro 相关jar包
        'org.apache.shiro:shiro-core:1.2.3',
        'org.apache.shiro:shiro-web:1.2.3',
        'org.apache.shiro:shiro-aspectj:1.2.3',
        'org.apache.shiro:shiro-ehcache:1.2.3',
        'org.apache.shiro:shiro-spring:1.2.3',

        //encache
        'net.sf.ehcache:ehcache-core:2.6.6',

        //dom4j
        'dom4j:dom4j:1.6.1',

        //json
        'com.alibaba:fastjson:1.1.39',

        //joda-time
        'joda-time:joda-time:2.3',
        
        'javax.servlet:javax.servlet-api:3.1.0',
        'javax.servlet.jsp:jsp-api:2.2',
        'com.octo.captcha:jcaptcha:2.0-alpha-1',
        'com.octo.captcha:jcaptcha-integration-simple-servlet:2.0-alpha-1',
        'org.apache.poi:poi:3.10-FINAL',
        'org.apache.poi:poi-ooxml:3.10-FINAL',
        'mysql:mysql-connector-java:5.1.28',
        'javax.servlet:jstl:1.2',
        
        //日期美化
        'org.ocpsoft.prettytime:prettytime:3.2.3.Final'
       
        
        
    )

    testCompile 'junit:junit:4.11'
}
